[package]
name = "optimal-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["approx"] }
ndarray-rand = "0.14.0"
rand_isaac = "0.3.0"
approx = "0.4.0"
rand = "0.8.5"
